2022-09-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_special): Fix code style nit;
	align function definition with declaration (internal linkage).

2022-09-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grops/ps.cpp (ps_printer::special)
	(resource_manager::process_file): Fix code style nit.  Mark
	static structs initialized within functions and never modified
	thereafter as `const`.  This attempts to work around an apparent
	false positive from AddressSanitizer.  If it doesn't pacify
	ASAN, please explain to me how constant structure members
	initialized to string literals and function pointers within the
	translation unit can ever be null.  If that is infeasible,
	please report a bug to your compiler vendor.

	Fixes (addresses, at any rate) https://savannah.gnu.org/bugs/\
	?61643>.  Thanks to Bjarni Ingi Gislason for the report.

2022-09-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Refactor: relocate most rendering option handling to
	"doc.tmac" from "doc-ditroff" and "doc-nroff", cutting down on a
	lot of duplication.  The `S` register retains separate handling.

	* tmac/doc.tmac:
	* tmac/mdoc/doc-ditroff:
	* tmac/mdoc/doc-nroff: Do it.

2022-09-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/mdoc/doc-ditroff (doc-setup-page-layout):  In troff mode,
	if the user does not define the `LL` register, use the device's
	default line length, not 6.5 inches.  If the user does not
	define the `LT` register, make the default line length for
	titles the same as the regular line length, not 6.5 inches
	independently of it.  This is consistent with man(7)'s handling
	of `LL` and `LT`.

2022-09-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Support `AD` string to set default adjustment mode.

	* tmac/mdoc/doc-common (Sh): Set adjustment mode to
	user-specified default, not troff's default (and not only in
	troff mode).

	* tmac/mdoc/doc-ditroff: